# querymind

./: .env.example  .gitignore  CODE-REVIEW.md  LICENSE.txt  PROJECT-STATUS.md  README.md  SUPPORT.md  USER-GUIDE.md  pyproject.toml  requirements.txt
docker/: .env.example  docker-compose.yml
examples/: 01_basic_search.py
querymind/: __init__.py
querymind/agents/: __init__.py  base_agent.py  deep_research_agent.py  fast_search_agent.py  router.py  vault_search_agent_local.py  web_search_client.py
querymind/cli/: __init__.py  __main__.py  main.py
querymind/core/: __init__.py  cache.py  config.py  conversation_memory.py  embeddings.py  feature_flags.py  logging_config.py  search.py
querymind/mcp/: security_validator.py  server.py
tests/: __init__.py  test_imports_work.py  test_router_basic.py  test_security_validation.py
